--- a/assets/css/shadow-content.css
+++ b/assets/css/shadow-content.css
@@ -4,7 +4,7 @@
 }
 
 .oxyplug-modal,
-.oxyplug-modal *:not(.oxyplug-modal-close) {
+.oxyplug-modal *:not(.oxyplug-modal-close, [class^="oxyplug-icon-"], [class*=" oxyplug-icon-"]) {
   font-family: Montserrat, sans-serif !important;
   font-weight: 500;
   font-size: 18px;
